force-app/main/default/objects/Organisation__c/Organisation__c.object-meta.xml
<CustomObject>
    <label>Organisation</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>