force-app/main/default/objects/Organisation__c/fields/Camp_Class_Template__c.field-meta.xml
<CustomField>
    <fullName>Camp_Class_Template__c</fullName>
    <description>This field is used to store Panda Doc Template Id of Camp</description>
    <label>Camp Class Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>