force-app/main/default/objects/Organisation__c/fields/CPF_Advice_Code__c.field-meta.xml
<CustomField>
    <fullName>CPF_Advice_Code__c</fullName>
    <label>CPF Advice Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>