force-app/main/default/objects/Organisation__c/fields/CPF_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>CPF_Payment_Type__c</fullName>
    <label>CPF Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>