force-app/main/default/objects/Organisation__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>