force-app/main/default/objects/Organisation__c/fields/Netsuite_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Company_Name__c</fullName>
    <label>Netsuite Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>