force-app/main/default/objects/Organisation__c/fields/Sage_Company__c.field-meta.xml
<CustomField>
    <fullName>Sage_Company__c</fullName>
    <label>Sage Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGP</fullName>
            </value>
            <value>
                <fullName>AGH</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>ACP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>