force-app/main/default/objects/Organisation__c/fields/Student_Policies_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Policies_Template_Id__c</fullName>
    <label>Student Policies Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>